make constructor overridable, env var 'PORT'
- don't use com.google.common.base.Strings